@@ -29,7 +29,7 @@ namespace Glom
 {
 
 FileChooser_Export::FileChooser_Export()
-: Gtk::FileChooserDialog(_("Export To File."), Gtk::FILE_CHOOSER_ACTION_SAVE),
+: Gtk::FileChooserDialog(_("Export to File"), Gtk::FILE_CHOOSER_ACTION_SAVE),
   m_extra_widget(false, Utils::DEFAULT_SPACING_SMALL),
 #ifndef GLOM_ENABLE_CLIENT_ONLY
   m_button_format(_("Define Data _Format"), true /* use mnenomic */),
@@ -37,8 +37,10 @@ FileChooser_Export::FileChooser_Export()
 #endif //GLOM_ENABLE_CLIENT_ONLY
   m_document(0)
 {
+  set_icon_name("glom");
+
   add_button(Gtk::Stock::CANCEL, Gtk::RESPONSE_CANCEL);
-  add_button(_("Export"), Gtk::RESPONSE_OK);
+  add_button(_("_Export"), Gtk::RESPONSE_OK);
 
   m_extra_widget.pack_start(m_button_format, Gtk::PACK_SHRINK);
 
